# daddyx

./: .env.example  .gitignore  Anchor.toml  Dockerfile  README.md  daddyx-implementation-summary.md  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md  tsconfig.anchor.json
.agents/: agent_assets_metadata.toml
artifacts/api-server/src/routes/: admin.ts  campaigns.ts  creators.ts  events.ts  index.ts  stats.ts  wallet.ts
artifacts/daddyx/: index.html  package.json  vite.config.ts
artifacts/daddyx/.replit-artifact/: artifact.toml
artifacts/daddyx/src/: App.tsx  index.css
attached_assets/: App_1777796506415.tsx  Pasted-1-5-Events-Anchor-Event-Structs-rust-event-pub-struct-T_1777771201526.txt  Pasted-API-Routes-GET-api-events-all-events-with-DaddyX-enable_1777771279561.txt  Pasted-Addition-4-Frontend-Campaign-Creation-Flow-Add-new-fron_1777771431745.txt  Pasted-EVM-ADDITIONS-Creator-Program-Campaign-Flow-Fund-Archit_1777771327963.txt  Pasted-PROJECT-OVERVIEW-Product-DaddyX-Fan-Powered-Event-Finan_1777770918223.txt  Pasted-Solana-Build-Prompt-Additions-Add-the-following-to-the-_1777771481083.txt  Pasted-raise-price-Current-owner-raises-C-at-the-exploit-preve_1777771169207.txt  README_1777796493451.md  daddyx-anchor-tests_1777803977976.ts  metadata_1777796493450.json
lib/api-spec/: openapi.yaml
programs/daddyx/: Cargo.toml
programs/daddyx/src/: lib.rs
scripts/: deploy.ts  package.json
scripts/src/: migrate.ts  seed.ts
tests/: daddyx.ts
tests/wallets/: fan1.json  fan2.json  fan3.json  oracle.json  organizer.json
(+24 files in other folders)
