[package]
name = "daddyx"
version = "0.1.0"
description = "DaddyX Fan-Powered Event Finance on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "daddyx"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
